--- a/Exercice-Build/package.json
+++ b/Exercice-Build/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "http-server": "^14.1.1",
     "md5": "^2.2.1",
+    "minimist": "^1.2.6",
     "terser": "^5.14.1"
   },
   "scripts": {
