--- a/Todos-REST-API/package.json
+++ b/Todos-REST-API/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^6.4.3",
     "morgan": "^1.10.0",
     "uuid": "^8.2.0"
   },
