--- a/Todos-REST-API/package.json
+++ b/Todos-REST-API/package.json
@@ -7,13 +7,19 @@
     "uuid": "^8.2.0"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "eslint": "^7.17.0",
-    "nodemon": "^2.0.7"
+    "mocha": "^10.0.0",
+    "nodemon": "^2.0.7",
+    "sinon": "^14.0.0",
+    "sinon-chai": "^3.7.0"
   },
   "scripts": {
     "start": "node index.js",
     "start:dev": "nodemon index.js",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test": "mocha \"**/*.spec.js\" --exclude \"node_modules/**/*.spec.js\""
   }
 }
